--- a/app/page.html
+++ b/app/page.html
@@ -128,6 +128,7 @@
                                 </svg>
                             </a>
                         </li>
+
                     </ul>
                 </div>
                 <div class="footer-top__item footer-top__nav">
@@ -226,3 +227,7 @@
 </body>
 
 </html>
+
+
+
+<!--Урок 13 1:27:00 мин-->
