--- a/app/index.html
+++ b/app/index.html
@@ -227,6 +227,35 @@
                 </div>
             </div>
         </section>
+        <section class="video-fashion">
+            <div class="container">
+                <div class="video-fashion__inner">
+                    <div class="video-fashion__popup" style="background-image: url('images/video-fashion.jpg') ;">
+                        <a class="video-fashion__play" data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk">
+                            <img src="images/icons/play-btn.svg" alt="video play button">
+                        </a>
+                    </div>
+                    <div class="video-fashion__content">
+                        <p class="video-fashion__subtitle">
+                            Winter Collection 20% Off
+                        </p>
+                        <h3 class="title video-fashion__title">
+                            TRENDING FASHION
+                        </h3>
+                        <p class="video-fashion__text">
+                            Lorem ipsum dolor sit amet, consectetur apiscing elit, sed do eLorem ipsum dolor sit amet,
+                            consectetur apiscing elit, sed do eLorem ipsum dolor sit amet, consectetur apiscing elit,
+                            sed do eLorem ipsum dolor sit amet, consectetur apiscing elit, sed do e
+                        </p>
+                        <a class="video-fashion__link" href="">
+                            View Now
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
     </main>
 
     <footer class="footer">
